# fish_ml

./: Dockerfile  MANIFEST.in  README.md  fly.toml  pyproject.toml  pyproject.toml.b  r.txt
LB/: default.conf
note/: fishml.ipynb  knn_fish.ipynb
src/fishmlserv/: curl.py  data.py  knn_pred.py  main.py
src/fishmlserv/model/: get-model-path.py  manager.py
tests/: hihi.py  test_call.py
