[project]
name = "fishmlserv"
version = "1.0.0"
description = "ML KNN - using sklearn"
authors = [
    {name = "Kimwonjoon", email = "kimpass189@gmail.com"},
]
dependencies = [
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
#packages = [
#    { include = "fishmlserv" },
#]
#include = [
#    "src/fishmlserv/model/model.pkl"
#]

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
