[project]
name = "fishmlserv"
version = "1.0.0"
description = "ML KNN - using sklearn"
authors = [
    {name = "Kimwonjoon", email = "kimpass189@gmail.com"},
]
dependencies = [
    "typer>=0.12.5",
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "tqdm>=4.66.5",
    "pyarrow>=17.0.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"

[project.scripts]
ppping = 'fishmlserv.cli:ppping'
get-model-path = 'fishmlserv.cli:model_path'
pp = 'fishmlserv.cli:pp'
ppp = 'fishmlserv.cli:ppp'
